--- a/packages/bundler/web/index.html
+++ b/packages/bundler/web/index.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<div id="container"></div>
-		<script src="/bundle.js"></script>
+		<script src="%PUBLIC_PATH%/bundle.js"></script>
 	</body>
 </html>
