--- a/packages/bundler/web/index.html
+++ b/packages/bundler/web/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
-		<title>Remotion Player</title>
+		<title>Remotion Preview</title>
 	</head>
 	<body>
 		<div id="container"></div>
