--- a/packages/bundler/web/index.html
+++ b/packages/bundler/web/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div id="container"></div>
+		<div id="menuportal"></div>
 		<script src="/bundle.js"></script>
 	</body>
 </html>
